updated the container

--- a/base.css
+++ b/base.css
@@ -11,8 +11,9 @@ body {
 
 /* General container */
 .container {
-   width: 90%;
+   width: 100%;
    max-width: 1200px;
+   max-height: 100%;
    margin: auto;
    padding: 20px;
 }
